--- a/byuipractice/styles/styles.css
+++ b/byuipractice/styles/styles.css
@@ -13,7 +13,7 @@ body {
     color: steelblue;
   }
   img {
-    width: 200px;
+    width: 700px;
     border: 4px solid steelblue;
   }
   p {
@@ -26,4 +26,8 @@ body {
   .main-para {
     font-size: 1.5em;
     line-height: 1.5em;
+}
+#active {
+    background-color: white;
+    color: steelblue;
 }
