--- a/byuipractice/styles/styles.css
+++ b/byuipractice/styles/styles.css
@@ -1,28 +1,30 @@
-body {
-    text-align: center;
-  }
-  nav {
+
+  nav, footer {
     background-color: steelblue;
+    color: white;
     padding: 10px;
-  }
+    text-align: center;
+}
   a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
   }
   h1 {
     color: steelblue;
+    text-align: center;
   }
   img {
-    width: 700px;
+    width: 80%;
     border: 4px solid steelblue;
+    display: block;
+    margin: 0 auto;
   }
-  p {
-    padding: 10px;
-  }
-  footer {
-    background-color: steelblue;
-    color: white;
-  }
+  main p {
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
   .main-para {
     font-size: 1.5em;
     line-height: 1.5em;
@@ -30,4 +32,12 @@ body {
 #active {
     background-color: white;
     color: steelblue;
+}
+footer p {
+  font-size: 20px;
+  margin: 20px auto;
+}
+a:hover {
+  background-color: white;
+  color: steelblue;
 }
