--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bubbler+One&display=swap');
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,6 +7,7 @@ nav a {
     text-align: center;
     color: #BBB09B;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg, h1, #hero-msg, h4 {
     text-align: center;
@@ -21,6 +23,10 @@ main section {
 }
 body {
     background-color: white; 
+    font-family: Bubbler One, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color:#324376;
@@ -29,11 +35,19 @@ header {
     background-color: white; 
     color: #BBB09B;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join {
     background-color: #324376; 
     color: #BBB09B;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color:#DD7E93;
@@ -50,27 +64,52 @@ nav a:hover, footer a:hover {
     background-color: #324376; 
     color: #BBB09B;
     text-decoration: none;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer p {
     font-size: 1.2em;
+    padding: 25px 50px;
+    margin-top: 200px;
 } 
 .home-title, h4 {
     background-color: white;
     color: #BBB09B;
+    font-family: "Amatic SC";
+    font-size: 2em;
+    margin-top: 10px;
 } 
 .msg h2, .msg p {
     background-color: #324376;
     color: #BBB09B;
+    font-family: "Amatic SC";
+    font-size: .8em
+    margin: 0;
+    padding-bottom: 15px;
 }  
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%
 }
 .logo {
     width: 80px;
+    padding-top: 5px;
 }
 footer p a:hover {
     text-decoration: underline;
+}
+.social {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
 }
