--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -184,12 +184,25 @@ footer p a:hover {
 main section img {
     box-sizing: border-box;
 }
+
+.sub-page {
+    background-color: #BBB09B;
+}
+.title-faq,.end-message {
+    text-align: center;
+    padding: 60px;
+    font-size: 40px;
+    color:#324376;
+    background-color: #BBB09B;
+}
 .grid-container {
     display: grid;
     grid-template-columns: 4fr 4fr;
     grid-gap: 50px;
     background-color: #BBB09B;
-    color: #324376
+    color: #324376;
+    text-align: center;
+    padding: 20px;
 }
 .grid-child-1,.grid-child-2,.grid-child-3,.grid-child-4{
     border: 5px #BBB09B;
@@ -205,6 +218,15 @@ main section img {
 .grid-child-5:hover, .grid-child-6:hover, .grid-child-7:hover, .grid-child-8:hover{
     transform: scale(1.1);
 }
+.mountains-2{
+    width:100%;
+    height: 200px;
+}
+.mountains-3{
+    width: 100%;
+    height: 200px;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
